--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -68,8 +68,9 @@
   @include transition(background .3s)
 
 .staff-score
-  font-size: 12px
-  float: left
+  margin-top: -7px
+  font-size: 10px
+  float: right
 
 .staff-thumb:hover .staff-name
   background: $main-color
@@ -82,9 +83,9 @@
 
 .staff-quote
   font-weight: bold
-  font-size: 13px
-  margin-top: -4px
-  float: left
+  font-size: 11px
+  margin-top: -11px
+  float: right
 
 .staff-description
   line-height: 1.5
