--- a/app/views/boxes/_staff_icons.slim
+++ b/app/views/boxes/_staff_icons.slim
@@ -1,5 +1,5 @@
 - if boxable.icons.present?
-  .social-links
+  .social-links style='margin-top: -10px'
     ul
       - boxable.icons.each do |icon|
         li
