--- a/app/views/boxes/_staff.slim
+++ b/app/views/boxes/_staff.slim
@@ -19,7 +19,7 @@
         .staff-description
           - if boxable.signature?
               =raw boxable.signature
-      = link_to details_staffs_staff_path(boxable), class: "show-staff-details", remote: true do
+      = link_to details_staffs_staff_path(boxable), class: "show-staff-details modal-link", remote: true do
         strong
           | Details
       //a.show-staff-details data-toggle="modal" href="#staffDetailsModal"
