change Details to Read Me More in staff partial.

--- a/app/views/boxes/_staff.slim
+++ b/app/views/boxes/_staff.slim
@@ -21,6 +21,6 @@
               =raw boxable.signature
       = link_to details_staffs_staff_path(boxable), class: "show-staff-details modal-link", remote: true do
         strong
-          | Details
+          | Read Me More
       //a.show-staff-details data-toggle="modal" href="#staffDetailsModal"
       //.staff-thumb style="background-image: url('#{boxable.second_image_url||boxable.image_url}');"
