--- a/app/views/boxes/_custom.slim
+++ b/app/views/boxes/_custom.slim
@@ -1,3 +1,3 @@
-= box_tag box, "data-ss-colspan" => boxable.width.to_s, style: "height: #{boxable.height}px; width: #{boxable.width}px;" do
+= box_tag box, "data-ss-colspan" => ((boxable.width+20)/300).to_s, style: "height: #{boxable.height}px; width: #{boxable.width}px;" do
   .box-custom-inner
     =raw boxable.content
