--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -22,6 +22,7 @@
 @import box_service
 @import box_client
 @import box_custom
+@import modals
 @import custom_boxes
 @import message
 @import dropdown_tag
