add custom height on technology

--- a/app/views/boxes/_technology.slim
+++ b/app/views/boxes/_technology.slim
@@ -1,4 +1,4 @@
-= box_tag box do
+= box_tag box, style: "height: #{boxable.real_height}px;" do
   .tech-title
     = image_tag boxable.image_url
   .tech-description
