--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -2,7 +2,7 @@
   .header
     .container
       .logo
-        a href="#" ShineNeXT
+        a href="/" class="route" ShineNeXT
 
       /= render partial: "/refinery/menu", locals: {dom_id: 'menu', css: 'menu'}
       - if current_refinery_user.present?
