traverse guest book

--- a/app/assets/stylesheets/message.sass
+++ b/app/assets/stylesheets/message.sass
@@ -9,7 +9,7 @@
   bottom: 0px
   right: -50px
   padding: 10px 10px 7px 10px
-  width: 305px
+  width: 360px
   font-weight: bold
   background: #08c none repeat scroll 0 0
   color: #fff
@@ -21,11 +21,12 @@
     color: #08c
     font-size: 12px
     padding: 3px 10px
-    padding-bottom: 10px
+    padding-bottom: 35px
     input
       width: 125px
-    textarea
-      width: 275px
+    .form-right
+      *
+        margin-left: 20px
 
     #message_submit
       margin-top: 10px
