fix lay guest book

--- a/app/assets/stylesheets/message.sass
+++ b/app/assets/stylesheets/message.sass
@@ -24,9 +24,8 @@
     padding-bottom: 35px
     input
       width: 125px
-    .form-right
-      *
-        margin-left: 20px
+    .form-left
+      margin-right: 20px
 
     #message_submit
       margin-top: 10px
@@ -45,7 +44,7 @@
     background: #fff
     padding: 15px
   #message_content
-    width: 360px
+    width: 380px
   #message_submit
     margin-top: 5px
 
