change golden to developer and change modal style

--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -107,3 +107,12 @@
   i
     margin-right: 5px
     color: $color-link
+
+.staff-modal
+  background-color: black
+  color: white
+  h1, h2, h3, h4, h5
+    color: white
+  .modal-body
+    hr
+      border-color: black
