--- a/app/views/common/_modals.slim
+++ b/app/views/common/_modals.slim
@@ -61,7 +61,7 @@
         .field.pull-right
           = f.submit
 
-#staffDetailsModal.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+#staffDetailsModal.staff-modal.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
   .modal-header
     a.pull-right.close.pointer data-dismiss="modal" aria-hidden="true" style="color:#ccc!important"
       i.icon-remove
