--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -27,7 +27,7 @@
           li
             a.route href="/technologies" TECHNOLOGIES
           li
-            a.route href="/golden" GOLDEN
+            a.route href="/golden" DEVELOPERS
           li.last
             a.route href="/blog" BLOG
 
