--- a/app/views/refinery/pages/boxes.html.slim
+++ b/app/views/refinery/pages/boxes.html.slim
@@ -9,7 +9,7 @@
 javascript:
   $(function() {
     $("img.staff-thumb").lazyload({
-      placeholder: "assets/rails.png",
+      placeholder: "assets/default-user.png",
       effect: "fadeIn"
     })
   });
