Replace all ShineNeXT with ShineDirection

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,7 @@ html
   body
     .masthead
       .container
-        h1 ShineNeXT
+        h1 ShineDirection
         i.icon-remove.pointer
         p Welcome to Shinetech Wuhan. Our clients are solving some of the most pressing problems of our time. We deliver disruptive thinking and empowering technology to help them succeed.
     = render 'common/message'
