--- a/app/views/home/_footer.slim
+++ b/app/views/home/_footer.slim
@@ -1,11 +1,11 @@
 .footer
   .footer-wrapper
     h2
-      | ShineNeXT outsourcing group
+      | ShineDirection outsourcing group
     .location
       | LuoYu street 312-5104 · WuChang · Wuhan · Hubei · China
     .contact
       | +86 10 8202 9769 · 
       = mail_to "sales@shinetechchina.com"
     .copyright
-      | Copyright © 2013 by ShineNeXT
+      | Copyright © 2013 by ShineDirection
