only use lazy load on golden page

--- a/app/views/refinery/pages/boxes.html.slim
+++ b/app/views/refinery/pages/boxes.html.slim
@@ -6,10 +6,11 @@
     a.new-box-inner data-toggle="modal" href="#newBoxModal"
       i.icon-plus
 
-javascript:
-  $(function() {
-    $("img.staff-thumb").lazyload({
-      placeholder: "assets/default-user.png",
-      effect: "fadeIn"
-    })
-  });
+- if view_golden_page?
+  javascript:
+    $(function() {
+      $("img.staff-thumb").lazyload({
+        placeholder: "assets/default-user.png",
+        effect: "fadeIn"
+      })
+    });
